syntax = "proto3";

package obs_remote.v5;

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service General {
  // Original: GetVersion
  rpc Version(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: BroadcastCustomEvent
  rpc BroadcastEvent(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetSystemStats
  rpc SystemStats(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: -
  rpc IsStudioModeEnabled(google.protobuf.Empty)
      returns (google.protobuf.BoolValue);
  // Original: -
  rpc SetStudioModeEnabled(google.protobuf.BoolValue)
      returns (google.protobuf.Empty);
  // Original: -
  rpc Sleep(google.protobuf.Duration) returns (google.protobuf.Empty);
}

service Hotkeys {
  // Original: GetHotkeyList
  rpc List(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: TriggerHotkeyByName
  rpc TriggerByName(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: TriggerHotkeyBySequence
  rpc TriggerBySequence(google.protobuf.Empty) returns (google.protobuf.Empty);
}

service Projectors {
  // Original: GetProjectorList
  rpc List(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: OpenProjector
  rpc Open(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: CloseProjector
  rpc Close(google.protobuf.Empty) returns (google.protobuf.Empty);
}

service Config {
  // Original: -
  rpc GlobalPersistentData(google.protobuf.Empty)
      returns (google.protobuf.Empty);
  // Original: -
  rpc SetGlobalPersistentData(google.protobuf.Empty)
      returns (google.protobuf.Empty);
  // Original: -
  rpc VideoSettings(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: -
  rpc SetVideoSettings(google.protobuf.Empty) returns (google.protobuf.Empty);
}

service SceneCollections {
  // Original: GetSceneCollectionList
  rpc List(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: **MISSING**
  rpc Current(google.protobuf.Empty) returns (google.protobuf.StringValue);
  // Original: SetCurrentSceneCollection
  rpc SetCurrent(google.protobuf.StringValue) returns (google.protobuf.Empty);
  // Original: CreateSceneCollection
  rpc Create(google.protobuf.StringValue) returns (google.protobuf.Empty);
  // Original: DeleteSceneCollection
  rpc Delete(google.protobuf.StringValue) returns (google.protobuf.Empty);
}

service Profiles {
  // Original: GetProfileList
  rpc List(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: **MISSING**
  rpc Current(google.protobuf.Empty) returns (google.protobuf.StringValue);
  // Original: SetCurrentProfile
  rpc SetCurrent(google.protobuf.StringValue) returns (google.protobuf.Empty);
  // Original: ProfileParameter
  rpc Parameter(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetProfileParameter
  rpc SetParameter(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: ProfilePersistentData
  rpc PersistentData(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetProfilePersistentData
  rpc SetPersistentData(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: CreateProfile
  rpc Create(google.protobuf.StringValue) returns (google.protobuf.Empty);
  // Original: DeleteProfile
  rpc Delete(google.protobuf.StringValue) returns (google.protobuf.Empty);
}

service Sources {
  // Original: GetSourceList
  rpc List(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetSourceActive
  rpc IsActive(google.protobuf.Empty) returns (google.protobuf.BoolValue);
  // Original: GetSourceScreenshot
  rpc Screenshot(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SaveSourceScreenshot
  rpc SaveScreenshot(google.protobuf.Empty) returns (google.protobuf.Empty);
}

service Scenes {
  // Original: GetSceneList
  rpc List(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetCurrentScene
  rpc Current(google.protobuf.Empty) returns (google.protobuf.StringValue);
  // Original: -
  rpc SetCurrentProgramScene(google.protobuf.StringValue)
      returns (google.protobuf.Empty);
  // Original: -
  rpc CurrentPreviewScene(google.protobuf.Empty)
      returns (google.protobuf.StringValue);
  // Original: -
  rpc SetCurrentPreviewScene(google.protobuf.StringValue)
      returns (google.protobuf.Empty);
  // Original: SetSceneIndex
  rpc SetIndex(google.protobuf.UInt32Value) returns (google.protobuf.Empty);
  // Original: SetSceneName
  rpc SetName(google.protobuf.StringValue) returns (google.protobuf.Empty);
  // Original: CreateScene
  rpc Create(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: DeleteScene
  rpc Delete(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetSceneTransitionOverride
  rpc TransitionOverride(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetSceneTransitionOverride
  rpc CreateTransitionOverride(google.protobuf.Empty)
      returns (google.protobuf.Empty);
  // Original: DeleteSceneTransitionOverride
  rpc DeleteTransitionOverride(google.protobuf.Empty)
      returns (google.protobuf.Empty);
}

service Inputs {
  // Original: GetInputList
  rpc List(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetInputKindList
  rpc ListKinds(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetSpecialInputNames
  rpc ListSpecial(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetInputDefaultSettings
  rpc DefaultSettings(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetInputSettings
  rpc Settings(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetInputSettings
  rpc SetSettings(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetInputMode
  rpc Mode(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetInputMode
  rpc SetMode(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: ToggleInputMode
  rpc ToggleMode(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetInputVolume
  rpc Volume(google.protobuf.Empty) returns (google.protobuf.FloatValue);
  // Original: SetInputVolume
  rpc SetVolume(google.protobuf.FloatValue) returns (google.protobuf.Empty);
  // Original: GetInputAudioSyncOffset
  rpc AudioSyncOffset(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetInputAudioSyncOffset
  rpc SetAudioSyncOffset(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetInputTracks
  rpc Tracks(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetInputTracks
  rpc SetTracks(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetInputMonitorType
  rpc MonitorMode(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetInputMonitorType
  rpc SetMonitorMode(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetInputActive
  rpc IsActive(google.protobuf.Empty) returns (google.protobuf.BoolValue);
  // Original: GetInputPropertiesListPropertyItems
  rpc PropertiesListPropertyItems(google.protobuf.Empty)
      returns (google.protobuf.Empty);
  // Original: PressInputPropertiesButton
  rpc PressPropertiesButton(google.protobuf.Empty)
      returns (google.protobuf.Empty);
  // Original: SetInputName
  rpc SetName(google.protobuf.StringValue) returns (google.protobuf.Empty);
  // Original: CreateInput
  rpc Create(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: DeleteInput
  rpc Delete(google.protobuf.Empty) returns (google.protobuf.Empty);
}

service Transitions {
  // Original: GetTransitionList
  rpc List(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetCurrentTransition
  rpc Current(google.protobuf.Empty) returns (google.protobuf.StringValue);
  // Original: SetCurrentTransition
  rpc SetCurrent(google.protobuf.StringValue) returns (google.protobuf.Empty);
  // Original: SetCurrentTransitionDuration
  rpc SetCurrentDuration(google.protobuf.Duration)
      returns (google.protobuf.Empty);
  // Original: GetTransitionSettings
  rpc Settings(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetTransitionSettings
  rpc SetSetttings(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: ReleaseTbar
  rpc ReleaseTBar(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetTbarPosition
  rpc SetTBarPosition(google.protobuf.FloatValue)
      returns (google.protobuf.Empty);
  // Original: TriggerStudioModeTransition
  rpc TriggerStudioModeTransition(google.protobuf.Empty)
      returns (google.protobuf.Empty);
  // Original: CreateTransition
  rpc Create(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: DeleteTransition
  rpc Delete(google.protobuf.Empty) returns (google.protobuf.Empty);
}

service Filters {
  // Original: GetSourceFilterList
  rpc List(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetSourceFilterDefaultSettings
  rpc DefaultSettings(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetSourceFilter
  rpc Get(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetSourceFilterIndex
  rpc SetIndex(google.protobuf.UInt32Value) returns (google.protobuf.Empty);
  // Original: SetSourceFilterSettings
  rpc SetSettings(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetSourceFilterEnabled
  rpc SetEnabled(google.protobuf.BoolValue) returns (google.protobuf.Empty);
  // Original: CreateSourceFilter
  rpc Create(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: DeleteSourceFilter
  rpc Delete(google.protobuf.Empty) returns (google.protobuf.Empty);
}

service SceneItems {
  // Original: GetSceneItemList
  rpc List(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetGroupSceneItemList
  rpc ListGroup(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetSceneItemTransform
  rpc Transform(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetSceneItemTransform
  rpc SetTransform(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetSceneItemEnabled
  rpc IsEnabled(google.protobuf.Empty) returns (google.protobuf.BoolValue);
  // Original: SetSceneItemEnabled
  rpc SetEnabled(google.protobuf.BoolValue) returns (google.protobuf.Empty);
  // Original: GetSceneItemLocked
  rpc IsLocked(google.protobuf.Empty) returns (google.protobuf.BoolValue);
  // Original: SetSceneItemLocked
  rpc SetLocked(google.protobuf.BoolValue) returns (google.protobuf.Empty);
  // Original: GetSceneItemColor
  rpc Color(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetSceneItemColor
  rpc SetColor(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetSceneItemIndex
  rpc SetIndex(google.protobuf.UInt32Value) returns (google.protobuf.Empty);
  // Original: CreateSceneItem
  rpc Create(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: DeleteSceneItem
  rpc Delete(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: DuplicateSceneItem
  rpc Duplicate(google.protobuf.Empty) returns (google.protobuf.Empty);
}

service Outputs {
  // Original: GetOutputList
  rpc List(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetOutputStatus
  rpc Status(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: ToggleOutput
  rpc Toggle(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: StartOutput
  rpc Start(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: StopOutput
  rpc Stop(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetOutputSettings
  rpc Settings(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetOutputSettings
  rpc SetSettings(google.protobuf.Empty) returns (google.protobuf.Empty);
}

service VirtualCam {
  // Original: GetVirtualCamStatus
  rpc Status(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: ToggleVirtualCam
  rpc Toggle(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: StartVirtualCam
  rpc Start(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: StopVirtualCam
  rpc Stop(google.protobuf.Empty) returns (google.protobuf.Empty);
}

service ReplayBuffer {
  // Original: GetReplayBufferStatus
  rpc Status(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: ToggleReplayBuffer
  rpc Toggle(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: StartReplayBuffer
  rpc Start(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: StopReplayBuffer
  rpc Stop(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SaveReplayBuffer
  rpc Save(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetReplayBufferTime
  rpc Time(google.protobuf.Empty) returns (google.protobuf.Timestamp);
  // Original: SetReplayBufferTime
  rpc SetTime(google.protobuf.Timestamp) returns (google.protobuf.Empty);
}

// Original: Stream
service Streaming {
  // Original: GetStreamStatus
  rpc Status(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: ToggleStream
  rpc Toggle(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: StartStream
  rpc Start(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: StopStream
  rpc Stop(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SendStreamCaptions
  rpc SendCaptions(google.protobuf.StringValue) returns (google.protobuf.Empty);
  // Original: GetStreamBitrateSetting
  rpc Bitrate(google.protobuf.Empty) returns (google.protobuf.UInt32Value);
  // Original: SetStreamBitrateSetting
  rpc SetBitrate(google.protobuf.UInt32Value) returns (google.protobuf.Empty);
  // Original: GetStreamServiceSettings
  rpc Settings(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetStreamServiceSettings
  rpc SetSettings(google.protobuf.Empty) returns (google.protobuf.Empty);
}

// Original: Record
service Recording {
  // Original: GetRecordStatus
  rpc Status(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: ToggleRecord
  rpc Toggle(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: StartRecord
  rpc Start(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: StopRecord
  rpc Stop(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: ToggleRecordPause
  rpc TogglePause(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: PauseRecord
  rpc Pause(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: ResumeRecord
  rpc Resume(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetRecordDirectory
  rpc Directory(google.protobuf.Empty) returns (google.protobuf.StringValue);
  // Original: SetRecordDirectory
  rpc SetDirectory(google.protobuf.StringValue) returns (google.protobuf.Empty);
  // Original: GetRecordFilenameFormatting
  rpc FilenameFormatting(google.protobuf.Empty)
      returns (google.protobuf.StringValue);
  // Original: SetRecordFilenameFormatting
  rpc SetFilenameFormatting(google.protobuf.Empty)
      returns (google.protobuf.StringValue);
}

service MediaInputs {
  // Original: GetMediaInputStatus
  rpc Status(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: OffsetMediaInputTimecode
  rpc OffsetTimecode(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetMediaInputTimecode
  rpc SetTimecode(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetMediaInputPauseState
  rpc IsPaused(google.protobuf.Empty) returns (google.protobuf.BoolValue);
  // Original: StopMediaInput
  rpc Stop(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: RestartMediaInput
  rpc Restart(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: NextMediaInputPlaylistItem
  rpc PlayNext(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: PreviousMediaInputPlaylistItem
  rpc PlayPrevious(google.protobuf.Empty) returns (google.protobuf.Empty);
}

service Events {
  rpc All(google.protobuf.Empty) returns (stream Event);
  rpc General(google.protobuf.Empty) returns (stream GeneralEvent);
  rpc Config(google.protobuf.Empty) returns (stream ConfigEvent);
  rpc Scenes(google.protobuf.Empty) returns (stream ScenesEvent);
  rpc Inputs(google.protobuf.Empty) returns (stream InputsEvent);
  rpc Transitions(google.protobuf.Empty) returns (stream TransitionsEvent);
  rpc Filters(google.protobuf.Empty) returns (stream FiltersEvent);
  rpc Outputs(google.protobuf.Empty) returns (stream OutputsEvent);
  rpc SceneItems(google.protobuf.Empty) returns (stream SceneItemsEvent);
  rpc MediaInputs(google.protobuf.Empty) returns (stream MediaInputsEvent);
  rpc HighVolume(google.protobuf.Empty) returns (stream HighVolumeEvent);
}

message Event {
  oneof value {
    GeneralEvent general = 1;
    ConfigEvent config = 2;
    ScenesEvent scenes = 3;
    InputsEvent inputs = 4;
    TransitionsEvent transitions = 5;
    FiltersEvent filters = 6;
    OutputsEvent outputs = 7;
    SceneItemsEvent scene_items = 8;
    MediaInputsEvent media_inputs = 9;
    HighVolumeEvent high_volume = 10;
  }
}

message GeneralEvent {
  oneof value {
    ExitStarted exit_started = 1;
    StudioModeStateChanged studio_mode_state_changed = 2;
    Custom custom = 3;
  }

  message ExitStarted {}
  message StudioModeStateChanged {}
  message Custom {}
}

message ConfigEvent {
  oneof value {
    CurrentSceneCollectionChanged current_scene_collection_changed = 1;
    SceneCollectionListChanged scene_collection_list_changed = 2;
    CurrentProfileChanged current_profile_changed = 3;
    ProfileListChanged profile_list_changed = 4;
  }

  message CurrentSceneCollectionChanged {}
  message SceneCollectionListChanged {}
  message CurrentProfileChanged {}
  message ProfileListChanged {}
}

message ScenesEvent {
  oneof value {
    Created created = 1;
    Removed removed = 2;
    NameChanged name_changed = 3;
    CurrentChanged current_changed = 4;
    CurrentPreviewChanged current_preview_changed = 5;
    ListReindexed list_reindexed = 6;
  }

  // Original: SceneCreated
  message Created {}
  // Original: SceneRemoved
  message Removed {}
  // Original: SceneNameChanged
  message NameChanged {}
  // Original: CurrentSceneChanged
  message CurrentChanged {}
  // Original CurrentPreviewSceneChanged
  message CurrentPreviewChanged {}
  // Original: SceneListReindexed
  message ListReindexed {}
}

message InputsEvent {
  oneof value {
    Created created = 1;
    Removed removed = 2;
    NameChanged name_changed = 3;
    ActiveStateChanged active_state_changed = 4;
    ShowStateChanged show_state_changed = 5;
    MuteStateChanged mute_state_changed = 6;
    VolumeChanged volume_changed = 7;
    AudioSyncOffsetChanged audio_sync_offset_changed = 8;
    AudioTracksChanged audio_tracks_changed = 9;
  }

  // Original: InputCreated
  message Created {}
  // Original: InputRemoved
  message Removed {}
  // Original: InputNameChanged
  message NameChanged {}
  // Original: InputActiveStateChanged
  message ActiveStateChanged {}
  // Original: InputShowStateChanged
  message ShowStateChanged {}
  // Original: InputMuteStateChanged
  message MuteStateChanged {}
  // Original: InputVolumeChanged
  message VolumeChanged {}
  // Original: InputAudioSyncOffsetChanged
  message AudioSyncOffsetChanged {}
  // Original: InputAudioTracksChanged
  message AudioTracksChanged {}
}

message TransitionsEvent {
  oneof value {
    Created created = 1;
    Removed removed = 2;
    NameChanged name_changed = 3;
    CurrentChanged current_changed = 4;
    CurrentDurationChanged current_duration_changed = 5;
    Started started = 6;
    Ended ended = 7;
  }

  // Original: TransitionCreated
  message Created {}
  // Original: TransitionRemoved
  message Removed {}
  // Original: TransitionNameChanged
  message NameChanged {}
  // Original: CurrentTransitionChanged
  message CurrentChanged {}
  // Original: CurrentTransitionDurationChanged
  message CurrentDurationChanged {}
  // Original: TransitionStarted
  message Started {}
  // Original: TransitionEnded
  message Ended {}
}

message FiltersEvent {
  oneof value {
    Created created = 1;
    Removed removed = 2;
    NameChanged name_changed = 3;
    AddedToSource added_to_source = 4;
    RemovedFromSource removed_from_source = 5;
    SourceListReindexed source_list_reindexed = 6;
  }

  // Original: FilterCreated
  message Created {}
  // Original: FilterRemoved
  message Removed {}
  // Original: FilterNameChanged
  message NameChanged {}
  // Original: SourceFilterAdded
  message AddedToSource {}
  // Orignal: SourceFilterRemoved
  message RemovedFromSource {}
  // Original: SourceListReindexed
  message SourceListReindexed {}
}

message OutputsEvent {
  oneof value {
    StreamStateChanged stream_state_changed = 1;
    RecordStateChanged record_state_changed = 2;
    ReplayBufferStateChanged replay_buffer_state_changed = 3;
    VirtualCamStateChanged virtual_cam_state_changed = 4;
  }

  message StreamStateChanged {}
  message RecordStateChanged {}
  message ReplayBufferStateChanged {}
  message VirtualCamStateChanged {}
}

message SceneItemsEvent {
  oneof value {
    Created created = 1;
    Removed removed = 2;
    ListReindexed list_reindexed = 3;
    EnableStateChanged enable_state_changed = 4;
    LockStateChanged lock_state_changed = 5;
    TransformChanged transform_changed = 6;
  }

  // Original: SceneItemCreated
  message Created {}
  // Original: SceneItemRemoved
  message Removed {}
  // Original: SceneItemListReindexed
  message ListReindexed {}
  // Original: SceneItemEnableStateChanged
  message EnableStateChanged {}
  // Original: SceneItemLockStateChanged
  message LockStateChanged {}
  // Original: SceneItemTransformChanged
  message TransformChanged {}
}

message MediaInputsEvent {
  oneof value {
    PlaybackStarted playback_started = 1;
    PlaybackEnded playback_ended = 2;
    ActionTriggered action_triggered = 3;
  }

  // Original: MediaInputPlaybackStarted
  message PlaybackStarted {}
  // Original: MediaInputPlaybackEnded
  message PlaybackEnded {}
  // Original: MediaInputActionTriggered
  message ActionTriggered {}
}

message HighVolumeEvent {
  oneof value { InputVolumeMeters input_volume_meters = 1; }

  message InputVolumeMeters {}
}
